--- a/profile.html
+++ b/profile.html
@@ -1,9 +1,56 @@
+<!doctype html>
+<html lang="id">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Profile</title>
+  <meta name="description" content="Contoh halaman index.html responsif, sederhana, dan modern untuk portofolio atau landing page.">
+  <link rel="icon" href="data:;base64,iVBORw0KGgo=">
+  <style>
+    :root{
+      --bg:#0f1724; /* deep navy */
+      --card:#0b1220;
+      --muted:#98a0b3;
+      --accent:#7c3aed; /* purple */
+      --glass: rgba(255,255,255,0.04);
+      color-scheme: dark;
+    }
+    *{box-sizing:border-box}
+    html,body{height:100%;margin:0;font-family:Inter,ui-sans-serif,system-ui,-apple-system,"Segoe UI",Roboto,'Helvetica Neue',Arial;}
+    body{background:linear-gradient(180deg,var(--bg) 0%, #071026 100%);color:#e6eef8;line-height:1.5;-webkit-font-smoothing:antialiased;padding:24px}
+    .container{max-width:1024px;margin:0 auto}
+    header{display:flex;align-items:center;justify-content:space-between;padding:14px 0}
+    .logo{display:flex;gap:12px;align-items:center}
+    .logo .mark{width:44px;height:44px;border-radius:10px;background:linear-gradient(135deg,var(--accent),#3b82f6);display:flex;align-items:center;justify-content:center;font-weight:700}
+
+    nav a{color:var(--muted);text-decoration:none;margin-left:18px;font-size:15px}
+    nav a.primary{background:linear-gradient(90deg,var(--accent),#06b6d4);color:white;padding:8px 12px;border-radius:8px}
+
+    .hero{display:grid;grid-template-columns:1fr 320px;gap:28px;align-items:center;margin-top:28px}
+    .card{background:linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.01));border-radius:12px;padding:20px;box-shadow:0 6px 20px rgba(2,6,23,0.6);}
+    h1{font-size:28px;margin:0 0 8px}
+    p.lead{color:var(--muted);margin:0 0 18px}
+    .btn{display:inline-block;padding:10px 14px;border-radius:10px;text-decoration:none;font-weight:600}
+    .btn-cta{background:var(--accent);color:white}
+    .grid-3{display:grid;grid-template-columns:repeat(3,1fr);gap:12px;margin-top:16px}
+    .small{font-size:13px;color:var(--muted)}
+
+    .profile{display:flex;flex-direction:column;gap:12px;align-items:center;text-align:center}
+    .avatar{width:160px;height:160px;border-radius:14px;background:linear-gradient(180deg,#1f2937,#0b1220);display:flex;align-items:center;justify-content:center;font-size:38px;font-weight:700}
+
+    section.features{margin-top:26px;display:grid;grid-template-columns:repeat(3,1fr);gap:14px}
+    .feature{padding:16px;border-radius:10px;background:var(--glass);border:1px solid rgba(255,255,255,0.03)}
+    .feature h3{margin:6px 0 6px}
+    footer{margin-top:34px;text-align:center;color:var(--muted);font-size:13px}
+
+    /* responsive
+
 <!DOCTYPE html>
 <html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Profil Fahrii - SMK RPL</title>
+    <title>Profile </title>
     <style>
         /* ------------------------------------------- */
         /* CSS ANIMASI BACKGROUND (Gradien Bergerak)   */
@@ -317,4 +364,5 @@
         };
     </script>
 </body>
+
 </html>
